# qubic-random-client

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
docs/: Architecture.md  ClientUsage.en.md  ClientUsage.md  ClientUsage.simple.md  ClientUsage.simple.ru.md  Random.h  SC_Random_Alignment_Checklist.md  ShortDescriptio.txt
src/: app.rs  balance.rs  bob.rs  config.rs  console.rs  entropy.rs  heap_prof.rs  main.rs  pipeline.rs  protocol.rs  tick_data_watcher.rs  ticks.rs  transport.rs  wallet.rs
src/four_q/: consts.rs  mod.rs  ops.rs  types.rs
src/pipeline/: state.rs
src/qln/: AGENTS.md  mod.rs
