[package]
name = "RandomCient"
version = "0.1.0"
edition = "2024"

[dependencies]
scapi = { git = "https://github.com/N-010/scapi", version = "0.2.5" }
async-trait = "0.1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
rand_core = "0.6.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tiny-keccak = { version = "2", features = ["k12"] }
zeroize = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Memory"] }

[target.x86_64-unknown-linux-gnu.dependencies]
openssl-sys = { version = "0.9", features = ["vendored"] }
