[package]
name = "RandomCient"
version = "1.0.0"
edition = "2024"

[dependencies]
scapi = { git = "https://github.com/N-010/scapi", version = "0.3.0", rev = "e0a8debd184df28696e1f47267c3dd981dc10294" }
async-trait = "0.1"
atty = "0.2"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
rand_core = "0.6.4"
rpassword = "7"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tiny-keccak = { version = "2", features = ["k12"] }
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
zeroize = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Memory"] }

[target.x86_64-unknown-linux-gnu.dependencies]
openssl-sys = { version = "0.9", features = ["vendored"] }

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"
